[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/microgames/thiefdog/ThiefDog.gd" type="Script" id=1]
[ext_resource path="res://scenes/microgames/thiefdog/LadyAndBg.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/microgames/reusable/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/thiefdog/bg/bbq.png" type="Texture" id=4]
[ext_resource path="res://assets/thiefdog/bg/empanada.png" type="Texture" id=5]
[ext_resource path="res://scenes/microgames/thiefdog/Dog.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/top/bg.ogg" type="AudioStream" id=7]
[ext_resource path="res://scenes/microgames/thiefdog/DogBG.tscn" type="PackedScene" id=8]

[sub_resource type="Animation" id=2]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("Empanada:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dog:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "win"
tracks/0/type = "value"
tracks/0/path = NodePath("Empanada:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dog:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[node name="ThiefDogMain" type="Node"]
script = ExtResource( 1 )

[node name="LadyAndBG" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -30 )

[node name="DogCloseUp" type="Camera2D" parent="."]
position = Vector2( 546.629, 360.202 )
zoom = Vector2( 0.5, 0.5 )
__meta__ = {
"_editor_description_": "1"
}

[node name="BG" parent="DogCloseUp" instance=ExtResource( 8 )]
visible = false
position = Vector2( -160, -120 )

[node name="Dog" parent="." instance=ExtResource( 6 )]
position = Vector2( 552.582, 360.599 )

[node name="LoseTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="Bbq" type="Sprite" parent="."]
position = Vector2( -6.9438, 377 )
texture = ExtResource( 4 )
centered = false

[node name="Empanada" type="Sprite" parent="."]
visible = false
position = Vector2( 432.629, 442.202 )
texture = ExtResource( 5 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 320, 240 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 2 )
anims/win = SubResource( 1 )
[connection signal="try_chomp" from="Dog" to="DogCloseUp/BG" method="_on_Dog_try_chomp"]
[connection signal="try_chomp" from="Dog" to="." method="_on_Dog_try_chomp"]
[connection signal="try_chomp_finish" from="Dog" to="DogCloseUp/BG" method="_on_Dog_try_chomp_finish"]
[connection signal="try_chomp_finish" from="Dog" to="." method="_on_Dog_try_chomp_finish"]
[connection signal="timeout" from="LoseTimer" to="." method="_on_LoseTimer_timeout"]
[connection signal="message_over" from="HUD" to="." method="_on_HUD_message_over"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
